Make AuxiliaryInformation implement ImmutableList.